# langfence

./: .gitignore  .pypirc.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_validate.py
docs/: agent-team.md  architecture.md  privacy.md
examples/: contract.exclude_en.yaml  contract.zh.yaml  sglang_chat.py  vllm_chat.py
src/langfence/: __init__.py  cli.py  constraints.py  contracts.py  fence.py  language.py  privacy.py  retry.py  serialization.py  validation.py
src/langfence/adapters/: __init__.py  base.py  generic.py  sglang.py  vllm.py
src/langfence/clients/: __init__.py  http.py
src/langfence/service/: __init__.py  app.py  schemas.py
tests/golden/: test_payload_snapshots.py
tests/integration/: README.md  test_roundtrip.py
tests/unit/: test_adapters.py  test_cli.py  test_client.py  test_fence.py  test_imports.py  test_language.py  test_privacy.py  test_serialization.py  test_service.py  test_validation.py
