[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "langfence"
version = "0.2.0"
description = "Output contracts and language policies for vLLM, SGLang, LiteLLM, and compatible LLM APIs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "LangFence contributors" }
]
keywords = [
  "llm",
  "vllm",
  "sglang",
  "litellm",
  "openai-compatible",
  "anthropic",
  "structured-output",
  "constrained-decoding",
  "language-policy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "jsonschema>=4.22",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
language = [
  "lingua-language-detector>=2.0",
]
service = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "pydantic>=2.7",
  "types-PyYAML>=6.0",
  "types-jsonschema>=4.22",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
all = [
  "lingua-language-detector>=2.0",
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
langfence = "langfence.cli:app"

[project.urls]
Homepage = "https://github.com/jianbo27/langfence"
Issues = "https://github.com/jianbo27/langfence/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langfence"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/langfence",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["langfence"]

[[tool.mypy.overrides]]
module = ["uvicorn"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
